--- a/src/css/CreateAndUpdate.css
+++ b/src/css/CreateAndUpdate.css
@@ -8,12 +8,13 @@
 }
 
 .createPost h4 {
+    font-size: 22px;
     margin-top: 23px;
     margin-left: 30px;
 }
 
 .createPost #titleLabel {
-    margin-top: 34px;
+    margin-top: 5px;
     margin-left: 30px;
 }
 
@@ -55,4 +56,60 @@
     font-size: 16px;
     line-height: 19px;
 
+}
+
+
+@media screen and (max-width: 900px) {
+   .createPost {
+       width: 625px;
+   }
+
+   .createPost #inputTitle {
+       width: 560px;
+   }
+
+   .createPost #inputContent {
+    width: 560px;
+    }
+
+    .createPost #button {
+        margin-left: 480px;
+    }
+}
+
+@media screen and (max-width: 760px) {
+    .createPost {
+        width: 590px;
+    }
+ 
+    .createPost #inputTitle {
+        width: 520px;
+    }
+ 
+    .createPost #inputContent {
+     width: 520px;
+     }
+ 
+     .createPost #button {
+         margin-left: 438px;
+     }
+ }
+
+
+@media screen and (max-width: 680px) {
+    .createPost {
+        width: 550px;
+    }
+ 
+    .createPost #inputTitle {
+        width: 490px;
+    }
+ 
+    .createPost #inputContent {
+     width: 490px;
+     }
+ 
+     .createPost #button {
+         margin-left: 405px;
+     }
 }
