--- a/src/css/crudRender.css
+++ b/src/css/crudRender.css
@@ -55,11 +55,25 @@
 }
 
 
-
 @media screen and (max-width: 900px) {
     .crudView {
         width: 625px;
     }
+
+    .buttonEdit {
+        margin-left: 483px;
+        background-color: #000;
+        color: white;
+        border: none;
+    }
+    
+    .buttonDelete {
+        background-color: #000;
+        color: white;
+        border: none
+    }
+
+
  }
 
  @media screen and (max-width: 760px) {
@@ -74,4 +88,20 @@
         width: 550px;
         margin-left: 30px;
     }
+
+    .buttonEdit {
+        margin-left: 441px;
+        background-color: #000;
+        color: white;
+        border: none;
+    }
+    
+    .buttonDelete {
+        background-color: #000;
+        color: white;
+        border: none
+    }
+    
  }
+
+ 
