--- a/src/css/LoginContainer.css
+++ b/src/css/LoginContainer.css
@@ -109,7 +109,7 @@
 
 @media screen and (max-width: 340px) {
     .LoginContainer {
-        width: 310px;
+        width: 300px;
     }
 
     .LoginContainer p {
@@ -123,6 +123,26 @@
 
     .LoginContainer button {
         margin-left: 170px;
+        margin-top: 30px;
+    }
+}
+
+@media screen and (max-width: 280px) {
+    .LoginContainer {
+        width: 250px;
+    }
+
+    .LoginContainer p {
+        font-size: 13px;
+    }
+
+    .LoginContainer input {
+        width: 200px;
+        margin-left: 25px;
+    }
+
+    .LoginContainer button {
+        margin-left: 114px;
         margin-top: 30px;
     }
 }
