--- a/src/css/crudRender.css
+++ b/src/css/crudRender.css
@@ -14,7 +14,7 @@
 
 #previousPage {
     margin: 20px;
-    margin-left: 550px;
+    margin-left: 35%;
 }
 
 #username {
@@ -48,12 +48,21 @@
     margin-right: 30px;
     border-radius: 5px;
     box-shadow: 1px 1px 5px #000;
+    display: inline;
 }
 
 .pageButton:active {
     box-shadow: none;
 }
 
+.layout {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0px;
+    top: -60px;
+
+}
 
 @media screen and (max-width: 900px) {
     .crudView {
@@ -103,5 +112,3 @@
     }
     
  }
-
- 
