--- a/src/css/CrudContainer.css
+++ b/src/css/CrudContainer.css
@@ -1,27 +1,15 @@
 .CrudContainer {
-    width: 800px;
-    height: 5000px;
+    width: 45%;
+    height: 100%;
     background-color: white ;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
-@media screen and (max-width: 900px) {
-    .CrudContainer {
-        width: 700px;
-    }
-
-}
-
-
-@media screen and (max-width: 760px) {
-    .CrudContainer {
-        width: 650px;
-    }
-
-}
-
-@media screen and (max-width: 680px) {
-    .CrudContainer {
-        width: 600px;
-    }
-
+@media screen and (max-width: 985px) {
+   .CrudContainer {
+       width: 75%;
+   } 
 }
