--- a/src/css/crudRender.css
+++ b/src/css/crudRender.css
@@ -1,33 +1,50 @@
 .crudView {
     height: 328px;
-    width: 723px;
-    display: table;
-    margin-top: 100px;
-    margin-left: 38px;
+    width: 90%;
+    display: table;;
     border: 1px solid #000;
-  
+    margin-top: 50px; 
 }
 
-.header {
-    color: aqua;
+.crudView .buttonDiv {
+    display: flex;
+    width: 95%;
+    justify-content: flex-end;
 }
 
-#previousPage {
-    margin: 20px;
-    margin-left: 35%;
+.divDatetime {
+    width: 30%;
+    position: relative;
+    float: right;
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 34px;
 }
 
-#username {
-    margin-left: 37px;
+.divUsername {
+    width: 50%;
+    margin-left: 30px;
+    display: flex;
+    justify-content: flex-start;
+ 
 }
 
-#content {
-    margin-left: 37px;
+.divContent {
+    width: 90%;
+    margin-top: 17px;
+    margin-left: 30px;
+}
+
+.previousNextButton {
+    width: 100%;
+    height: 80px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
 }
 
 .buttonEdit {
-    margin-left: 600px;
-    margin-right: 20px;
     background-color: #000;
     color: white;
     border: none;
@@ -36,19 +53,21 @@
 .buttonDelete {
     background-color: #000;
     color: white;
-    border: none
+    border: none;
+    margin-left: 10px;
 }
 
 .pageButton {
-    width: 100px;
+    width: 120px;
     height: 33px;
     background-color: #000;
     color: white;
     font-size: 12px;
-    margin-right: 30px;
     border-radius: 5px;
     box-shadow: 1px 1px 5px #000;
     display: inline;
+    font-size: 15px;
+    margin-left: 15px;
 }
 
 .pageButton:active {
@@ -64,51 +83,20 @@
 
 }
 
-@media screen and (max-width: 900px) {
+
+@media screen and (max-width: 1050px) {
     .crudView {
-        width: 625px;
+        width: 90%;
     }
 
-    .buttonEdit {
-        margin-left: 483px;
-        background-color: #000;
-        color: white;
-        border: none;
-    }
-    
-    .buttonDelete {
-        background-color: #000;
-        color: white;
-        border: none
-    }
+}
 
 
- }
-
- @media screen and (max-width: 760px) {
+@media screen and (max-width: 985px) {
     .crudView {
-        width: 590px;
-        margin-left: 30px;
+        width: 90%;
+       
     }
- }
+}
 
- @media screen and (max-width: 680px) {
-    .crudView {
-        width: 550px;
-        margin-left: 30px;
-    }
 
-    .buttonEdit {
-        margin-left: 441px;
-        background-color: #000;
-        color: white;
-        border: none;
-    }
-    
-    .buttonDelete {
-        background-color: #000;
-        color: white;
-        border: none
-    }
-    
- }
