--- a/src/css/deleteComponent.css
+++ b/src/css/deleteComponent.css
@@ -1,5 +1,13 @@
+.DeleteComponent .buttonDiv {
+    width: 90%;
+    margin-left: 30px;
+    margin-top: 40px;
+    display: flex;
+    justify-content: flex-end;
+}
+
 .DeleteComponent {
-    width: 661px;
+    width: 40%;
     height: 168px;
     background-color: #fff;
     box-shadow: 2px 2px 5px;
@@ -13,9 +21,6 @@
 .DeleteComponent #yesButton {
     width: 111px;
     height: 33px;
-    margin-right: 16px;
-    margin-left: 389px;
-    margin-top: 50px;
 }
 
 .DeleteComponent #noButton {
@@ -23,9 +28,11 @@
     height: 33px;
 }
 
-.DeleteComponent button {
+.DeleteComponent .button {
     border: 1px solid #000;
     font-size: 16px;
     font-weight: bold;
     cursor: pointer;
+    display: inline;
+    margin-left: 20px;
 }
