--- a/src/css/header.css
+++ b/src/css/header.css
@@ -12,9 +12,9 @@
 
 .header h1 {
     position: absolute;
-    width: 188px;
+    width: 25%;
     height: 26px;
-    margin-left: 37px;
+    margin-left: 30px;
 
     font-style: normal;
     font-weight: bold;
