--- a/src/css/LoginLayout.css
+++ b/src/css/LoginLayout.css
@@ -1,7 +1,5 @@
 .layout {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
+    background-color: lightgray;
 }
