--- a/src/css/createPost.css
+++ b/src/css/createPost.css
@@ -1,10 +1,11 @@
 .createPost {
     width: 90%;
     height: 349px;
-    border: 1px solid #999;
+    box-shadow: 2px 2px 5px black;
     margin-top: 50px;
     display: flex;
     flex-direction: column;
+    border-radius: 10px;
 }
 
 .divH4 {
@@ -44,10 +45,11 @@
     display: flex;
     justify-content: left;
     width: 100%;
+    white-space: pre-wrap;
 }
 
 .divCreateButton {
-    width: 95%;
+    width: 94%;
     display: flex;
     justify-content:flex-end;
     margin-top: 20px;
@@ -90,6 +92,35 @@
     font-weight: bold;
     font-size: 16px;
     line-height: 19px;
+    border-radius: 5px;
+}
+
+@media screen and (max-width: 3201px) {
+    .createPost #inputTitle {
+        width: 94%;
+    }
+
+    .createPost #inputContent {
+        width: 94%;
+    }
+
+    .createPost .divCreateButton {
+        width: 97%;
+    } 
+}
+
+@media screen and (max-width: 2400px) {
+    .createPost #inputTitle {
+        width: 92%;
+    }
+
+    .createPost #inputContent {
+        width: 92%;
+    }
+
+    .createPost .divCreateButton {
+        width: 95%;
+    } 
 }
 
 @media screen and (max-width: 1300px) {
@@ -106,11 +137,81 @@
     } 
 }
 
-@media screen and (max-width: 1123px) {
+@media screen and (max-width: 1280px) {
+    .createPost #inputTitle {
+        width: 94%;
+    }
 
+    .createPost #inputContent {
+        width: 94%;
+    }
     .createPost .divCreateButton {
-        width: 92%;
+        width: 96.5%;
     } 
-}
+ }
+
+ @media screen and (max-width: 1110px) {
+    .createPost #inputTitle {
+        width: 92%;
+    }
+
+    .createPost #inputContent {
+        width: 92%;
+    }
+    .createPost .divCreateButton {
+        width: 95%;
+    } 
+ }
+
+
+ @media screen and (max-width: 855px) {
+    .createPost #inputTitle {
+        width: 88%;
+    }
+
+    .createPost #inputContent {
+        width: 88%;
+    }
+    .createPost .divCreateButton {
+        width: 93%;
+    } 
+ }
+
+ @media screen and (max-width: 500px) {
+    .createPost #inputTitle {
+        width: 84%;
+    }
+
+    .createPost #inputContent {
+        width: 84%;
+    }
+    .createPost .divCreateButton {
+        width: 90%;
+    } 
+ }
+
+
+ @media screen and (max-width: 450px) {
+    .createPost .divCreateButton {
+       width: 89%;
+    } 
+
+    .createPost #inputTitle {
+        width: 82%;
+
+    }
+
+    .createPost #inputContent {
+        width: 82%;
+    }
+ }
+
+
+ @media screen and (max-width: 350px) {
+    .createPost .divCreateButton {
+       width: 91%;
+    } 
+ }
+
 
 
