--- a/src/css/deleteComponent.css
+++ b/src/css/deleteComponent.css
@@ -1,3 +1,10 @@
+.DeleteComponent {
+    width: 40%;
+    height: 168px;
+    background-color: #fff;
+    box-shadow: 2px 2px 5px;
+}
+
 .DeleteComponent .buttonDiv {
     width: 90%;
     margin-left: 30px;
@@ -6,16 +13,10 @@
     justify-content: flex-end;
 }
 
-.DeleteComponent {
-    width: 40%;
-    height: 168px;
-    background-color: #fff;
-    box-shadow: 2px 2px 5px;
-}
 
 .DeleteComponent p {
     margin-top: 34px;
-    margin-left: 49px;
+    margin-left: 30px;
 }
 
 .DeleteComponent #yesButton {
@@ -36,3 +37,32 @@
     display: inline;
     margin-left: 20px;
 }
+
+@media screen and (max-width: 1280px) {
+    .DeleteComponent {
+        width: 70%;
+    }
+ }
+
+
+@media screen and (max-width: 845px) {
+    .DeleteComponent .buttonDiv {
+        width: 85%;
+    }
+ }
+
+ @media screen and (max-width: 480px) {
+    .DeleteComponent p {
+        margin-left: 15px;
+        font-size: 15px;
+    }
+ }
+
+
+ @media screen and (max-width: 450px) {
+    .DeleteComponent .buttonDiv {
+        width: 70%;
+    }
+ }
+
+ 
