--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,24 +1,23 @@
 .header {
     width: 100%;
-    height: 80px;
     background-color: #000;
     color: white;
     display: flex;
     justify-content: flex-start;
-    align-items: center;
-    
+    align-items: center;  
+    box-shadow: 1px 1px 5px black;  
 }
 
+.divH1 {
+    width: 50%;
+    margin-left: 30px;
+    display: inline-block;
+    overflow-wrap:break-word;
+}
 
 .header h1 {
-    position: absolute;
-    width: 25%;
-    height: 26px;
-    margin-left: 30px;
-
     font-style: normal;
     font-weight: bold;
     font-size: 22px;
     line-height: 26px;
-    white-space: nowrap;
 }
