--- a/src/css/LoginLayout.css
+++ b/src/css/LoginLayout.css
@@ -1,5 +1,9 @@
-.layout {
-    height: 100%;
+.loginLayout {
     width: 100%;
-    background-color: lightgray;
+    height: 100%;
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: gainsboro;
 }
