--- a/src/css/deleteComponent.css
+++ b/src/css/deleteComponent.css
@@ -13,7 +13,6 @@
     justify-content: flex-end;
 }
 
-
 .DeleteComponent p {
     margin-top: 34px;
     margin-left: 30px;
@@ -37,6 +36,17 @@
     display: inline;
     margin-left: 20px;
 }
+
+#deleteBackground {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.9);
+}
+
 
 @media screen and (max-width: 1280px) {
     .DeleteComponent {
