--- a/src/css/editComponent.css
+++ b/src/css/editComponent.css
@@ -66,6 +66,16 @@
     justify-content: flex-end;
 }
 
+#editBackground {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.9);
+}
+
 @media screen and (max-width: 1280px) {
     .editComponent {
         width: 70%;
