login button now turns gray if username has not been written

--- a/src/css/LoginContainer.css
+++ b/src/css/LoginContainer.css
@@ -47,6 +47,12 @@
     line-height: 19px;
 }
 
+#buttonDeactivated {
+    background-color: gainsboro;
+    border: gainsboro;
+    cursor: not-allowed;
+}
+
 @media screen and (max-width: 542px) {
     .LoginContainer {
         width: 400px;
