--- a/src/css/header.css
+++ b/src/css/header.css
@@ -4,15 +4,15 @@
     color: white;
     display: flex;
     justify-content: space-between;  
+    align-items: center;
     padding: 0px 28.75px 0px 30px;
     box-sizing: border-box;
     overflow-wrap: break-word;
 }
 
 .divH1 {
-    width: 40%;
+    width: 45%;
 }
-
 
 .header h1 {
     width: 100%;
@@ -21,5 +21,11 @@
     font-weight: bold;
     font-size: 22px;
     line-height: 26px;
+}
 
+
+@media screen and (max-width: 300px) {
+    .header h1 {
+        font-size: 18px;
+    }
 }
