--- a/src/css/deleteComponent.css
+++ b/src/css/deleteComponent.css
@@ -1,43 +1,4 @@
-.DeleteComponent {
-    width: 40%;
-    height: 168px;
-    background-color: #fff;
-    box-shadow: 2px 2px 5px;
-}
-
-.DeleteComponent .buttonDiv {
-    width: 90%;
-    margin-left: 30px;
-    margin-top: 40px;
-    display: flex;
-    justify-content: flex-end;
-}
-
-.DeleteComponent p {
-    margin-top: 34px;
-    margin-left: 30px;
-}
-
-.DeleteComponent #yesButton {
-    width: 111px;
-    height: 33px;
-}
-
-.DeleteComponent #noButton {
-    width: 111px;
-    height: 33px;
-}
-
-.DeleteComponent .button {
-    border: 1px solid #000;
-    font-size: 16px;
-    font-weight: bold;
-    cursor: pointer;
-    display: inline;
-    margin-left: 20px;
-}
-
-#deleteBackground {
+#deleteLayout {
     width: 100%;
     height: 100%;
     position: fixed;
@@ -47,32 +8,43 @@
     background-color: rgba(0, 0, 0, 0.9);
 }
 
+.DeleteComponent {
+    width: 90%;
+    height: 168px;
+    background-color: #fff;
+    box-shadow: 2px 2px 5px;
+    box-sizing: border-box;
+    padding: 34px 34px 25px 49px;
+    max-width: 661px;
+}
 
-@media screen and (max-width: 1280px) {
+.DeleteComponent p {
+    margin: 0px 205px 50px 0px;
+    width: 100%;
+}
+
+.DeleteComponent .buttonsDiv {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.DeleteComponent .button {
+    border: 1px solid #000;
+    font-size: 16px;
+    font-weight: bold;
+    cursor: pointer;
+    width: 111px;
+    height: 33px;
+    margin: 5px;
+}
+
+@media screen and (max-width: 420px) {
     .DeleteComponent {
-        width: 70%;
+        padding-left: 30px;
+        padding-top: 20px;
     }
- }
 
-
-@media screen and (max-width: 845px) {
-    .DeleteComponent .buttonDiv {
-        width: 85%;
+    .DeleteComponent .buttonsDiv {
+        justify-content: center;
     }
- }
-
- @media screen and (max-width: 480px) {
-    .DeleteComponent p {
-        margin-left: 15px;
-        font-size: 15px;
-    }
- }
-
-
- @media screen and (max-width: 450px) {
-    .DeleteComponent .buttonDiv {
-        width: 70%;
-    }
- }
-
- 
+}
