--- a/src/css/editComponent.css
+++ b/src/css/editComponent.css
@@ -1,26 +1,37 @@
+#editLayout {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.9);
+}
+
 .editComponent {
     height: 349px;
-    width: 40%;
+    width: 90%;
     box-shadow: 2px 2px 5px;
+    box-sizing: border-box;
     background-color: #fff;
     display: flex;
     flex-direction: column;
+    max-width: 700px;
+    padding: 23px 34px 29px 30px;
 }
 
 .editComponent p {
-    margin-left: 30px;
-    margin-top: 23px;
+    margin: 0px 394px 34px 0px;
+    width: 100%;
 }
 
 .editComponent #titleLabel {
-    margin-top: 5px;
-    margin-left: 30px;
+    margin: 0px 660px 7px 1px;
 }
 
 .editComponent #inputTitle {
-    margin-top: 7px;
-    margin-left: 30px;
-    width: 90%;
+    margin: 0px 0px 19px 0px;
+    width: 100%;
     height: 28px;
     background: #FFFFFF;
     border: 1px solid #777777;
@@ -29,19 +40,17 @@
 }
 
 .editComponent #contentLabel {
-    margin-top: 19px;
-    margin-left: 30px;
+    margin: 0px 635px 7px 1px;
 }
 
 .editComponent #inputContent {
-    margin-top: 7px;
-    margin-left: 30px;
-    width: 90%;
+    width: 100%;
     height: 74px;
+    margin: 0px 0px 35px 0px;
     border: 1px solid #777777;
     box-sizing: border-box;
     border-radius: 4px;
-    overflow-wrap: break-word;
+    resize: none;
 }
 
 .editComponent .editButton {
@@ -59,79 +68,8 @@
 }
 
 .editComponent .buttonDiv {
-    width: 90%;
-    margin-left: 30px;
-    margin-top: 20px;
+    width: 100%;
     display: flex;
     justify-content: flex-end;
 }
 
-#editBackground {
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgba(0, 0, 0, 0.9);
-}
-
-@media screen and (max-width: 1280px) {
-    .editComponent {
-        width: 70%;
-    }
- }
-
- @media screen and (max-width: 900px) {
-    .editComponent #inputTitle {
-        width: 88%;
-    }
-    .editComponent #inputContent {
-        width: 88%;
-    }
-
-    .editComponent .buttonDiv {
-        width: 88%;
-    }
- }
-
- @media screen and (max-width: 700px) {
-    .editComponent #inputTitle {
-        width: 85%;
-    }
-    .editComponent #inputContent {
-        width: 85%;
-    }
-
-    .editComponent .buttonDiv {
-        width: 85%;
-     
-    }
- }
-
- @media screen and (max-width: 530px) {
-    .editComponent #inputTitle {
-        width: 82%;
-    }
-    .editComponent #inputContent {
-        width: 82%;
-    }
-
-    .editComponent .buttonDiv {
-        width: 82%;
-    
-    }
- }
-
- @media screen and (max-width: 420px) {
-    .editComponent #inputTitle {
-        width: 74%;
-    }
-    .editComponent #inputContent {
-        width: 74%;
-    }
-
-    .editComponent .buttonDiv {
-        width: 70%;
-    }
- }
